# pyOiler

./: README.md  README.rst  pyproject.toml
src/: main.py
src/pyoiler/problems/: euler001.py  euler002.py  euler003.py  euler004.py  euler005.py  euler006.py  euler007.py  euler008.py  euler009.py  euler010.py  euler011.py  euler012.py  euler013.py  euler014.py  euler015.py  euler016.py  euler020.py  euler021.py  euler023.py  euler024.py  euler025.py  euler026.py  euler027.py  euler029.py  euler030.py  euler032.py  euler034.py  euler035.py  euler037.py  euler040.py  euler046.py  euler047.py  euler048.py  euler050.py  euler052.py  euler055.py  euler056.py  euler059.py  euler060.py  euler063.py  (+14 more)
src/pyoiler/shared/: cache.py  digits.py  divisors.py  fibonacci.py  list_arithmatic.py  more_itertools.py  practical.py  primes.py  solver.py
tests/: test_pyoiler.py
