[tool.poetry]
name = "pyOiler"
version = "0.1.0"
description = ""
authors = ["bathcat <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.11.1"
Rx = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
